--- a/Vpn.WebUI/Vpn.WebUI.csproj
+++ b/Vpn.WebUI/Vpn.WebUI.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MudBlazor" Version="6.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VpnDomain\VpnDomain.csproj" />
+  </ItemGroup>
+
 </Project>
