MuddatePicker ko bind vào Model fai qua biens trung gian

--- a/Vpn.WebUI/Vpn.WebUI.csproj
+++ b/Vpn.WebUI/Vpn.WebUI.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Reports\registryVpn.rdlc" />
+    <EmbeddedResource Include="Reports\registryVpn.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
