--- a/VpnDomain/efpt.config.json
+++ b/VpnDomain/efpt.config.json
@@ -14,6 +14,10 @@
    "SelectedToBeGenerated": 0,
    "Tables": [
       {
+         "Name": "[dbo].[ChucVu]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[NhanVien]",
          "ObjectType": 0
       },
