add GetMacAddress winform

--- a/Vpn.WebUI/Vpn.WebUI.csproj
+++ b/Vpn.WebUI/Vpn.WebUI.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NetworkTool\NetworkTool.csproj" />
     <ProjectReference Include="..\VpnDomain\VpnDomain.csproj" />
   </ItemGroup>
 
